#18892 closed bug (fixed)

[Tracker] doesn't show file size in KiB

Reported by: tzu_mi Owned by: nobody
Priority: normal Milestone: R1/beta5
Component: Applications/Tracker Version: R1/Development
Keywords: Cc: bitigchi
Blocked By: Blocking:
Platform: All

Description

Hi probably after this https://cgit.haiku-os.org/haiku/commit/?id=058be77bec97cbcd19cd8328efa63a4d58d80844

Tracker doesn't show file sizes in KiB, but only in bytes, MiB and GiB; I tried switching locales, but it appears in every language I tried (en,it,es,ca,sc..)

Change History (4)

comment:1 by madmax, 11 months ago

Cc: bitigchi added

Can't drop to Haiku today but so it seems. The size is first divided by 1024 and if *that*, not the size itself, is less than 1024 it uses the bytes format. Same thing in string_for_size. There would also be a nasty issue if you were to format something in the Petabytes or larger.

comment:2 by korli, 10 months ago

Milestone: UnscheduledR1/beta5

comment:4 by waddlesplash, 10 months ago

Resolution: fixed
Status: newclosed

Fix merged in hrev57710.

Note: See TracTickets for help on using tickets.