src/kits/shared/StringForRate.cpp
@@ -26,39 +26,32 @@ namespace BPrivate {
 const char*
 string_for_rate(double rate, char* string, size_t stringSize)
 {
-	BString printedRate;
-
-	double value = rate / 1024.0;
-	if (value < 1.0) {
-		BStringFormat format(
-			B_TRANSLATE_MARK_ALL("{0, plural, one{# byte/s} other{# bytes/s}}",
-			B_TRANSLATION_CONTEXT, "bytes per second"));
-
-		format.Format(printedRate, (int)rate);
-		strlcpy(string, gSystemCatalog.GetString(printedRate.String(), B_TRANSLATION_CONTEXT,
-			"bytes per second"), stringSize);
-
-		return string;
-	}
-
 	const char* kFormats[] = {
-		B_TRANSLATE_MARK_ALL("%s KiB/s", B_TRANSLATION_CONTEXT, "units per second"),
-		B_TRANSLATE_MARK_ALL("%s MiB/s", B_TRANSLATION_CONTEXT, "units per second"),
-		B_TRANSLATE_MARK_ALL("%s GiB/s", B_TRANSLATION_CONTEXT, "units per second"),
-		B_TRANSLATE_MARK_ALL("%s TiB/s", B_TRANSLATION_CONTEXT, "units per second")
+		B_TRANSLATE_MARK_COMMENT("{0, plural, one{%s byte/s} other{%s bytes/s}}",
+			"units per second"),
+		B_TRANSLATE_MARK_COMMENT("%s KiB/s", "units per second"),
+		B_TRANSLATE_MARK_COMMENT("%s MiB/s", "units per second"),
+		B_TRANSLATE_MARK_COMMENT("%s GiB/s", "units per second"),
+		B_TRANSLATE_MARK_COMMENT("%s TiB/s", "units per second")
 	};
 
 	size_t index = 0;
-	while (index < B_COUNT_OF(kFormats) && value >= 1024.0) {
-		value /= 1024.0;
+	while (index < B_COUNT_OF(kFormats) - 1 && rate >= 1024.0) {
+		rate /= 1024.0;
 		index++;
 	}
 
+	BString format;
+	BStringFormat formatter(
+		gSystemCatalog.GetString(kFormats[index], B_TRANSLATION_CONTEXT, "units per second"));
+	formatter.Format(format, rate);
+
+	BString printedRate;
 	BNumberFormat numberFormat;
-	numberFormat.SetPrecision(2);
-	numberFormat.Format(printedRate, value);
-	snprintf(string, stringSize, gSystemCatalog.GetString(kFormats[index], B_TRANSLATION_CONTEXT,
-		"units per second"), printedRate.String());
+	numberFormat.SetPrecision(index == 0 ? 0 : 2);
+	numberFormat.Format(printedRate, rate);
+
+	snprintf(string, stringSize, format.String(), printedRate.String());
 
 	return string;
 }
