src/kits/shared/StringForSize.cpp
@@ -28,39 +28,31 @@ namespace BPrivate {
 const char*
 string_for_size(double size, char* string, size_t stringSize)
 {
-	BString printedSize;
-
-	double value = size / 1024.0;
-	if (value < 1024.0) {
-		BStringFormat format(
-			B_TRANSLATE_MARK_ALL("{0, plural, one{# byte} other{# bytes}}",
-			B_TRANSLATION_CONTEXT, "size unit"));
-
-		format.Format(printedSize, (int)size);
-		strlcpy(string, gSystemCatalog.GetString(printedSize.String(), B_TRANSLATION_CONTEXT,
-			"size unit"), stringSize);
-
-		return string;
-	}
-
 	const char* kFormats[] = {
-		B_TRANSLATE_MARK_ALL("%s KiB", B_TRANSLATION_CONTEXT, "size unit"),
-		B_TRANSLATE_MARK_ALL("%s MiB", B_TRANSLATION_CONTEXT, "size unit"),
-		B_TRANSLATE_MARK_ALL("%s GiB", B_TRANSLATION_CONTEXT, "size unit"),
-		B_TRANSLATE_MARK_ALL("%s TiB", B_TRANSLATION_CONTEXT, "size unit")
+		B_TRANSLATE_MARK_COMMENT("{0, plural, one{%s byte} other{%s bytes}}", "size unit"),
+		B_TRANSLATE_MARK_COMMENT("%s KiB", "size unit"),
+		B_TRANSLATE_MARK_COMMENT("%s MiB", "size unit"),
+		B_TRANSLATE_MARK_COMMENT("%s GiB", "size unit"),
+		B_TRANSLATE_MARK_COMMENT("%s TiB", "size unit")
 	};
 
 	size_t index = 0;
-	while (index < B_COUNT_OF(kFormats) && value >= 1024.0) {
-		value /= 1024.0;
+	while (index < B_COUNT_OF(kFormats) - 1 && size >= 1024.0) {
+		size /= 1024.0;
 		index++;
 	}
 
+	BString format;
+	BStringFormat formatter(
+		gSystemCatalog.GetString(kFormats[index], B_TRANSLATION_CONTEXT, "size unit"));
+	formatter.Format(format, size);
+
+	BString printedSize;
 	BNumberFormat numberFormat;
-	numberFormat.SetPrecision(2);
-	numberFormat.Format(printedSize, value);
-	snprintf(string, stringSize, gSystemCatalog.GetString(kFormats[index], B_TRANSLATION_CONTEXT,
-		"size unit"), printedSize.String());
+	numberFormat.SetPrecision(index == 0 ? 0 : 2);
+	numberFormat.Format(printedSize, size);
+
+	snprintf(string, stringSize, format.String(), printedSize.String());
 
 	return string;
 }
